# lingualink

./: .gitignore  .pre-commit-config.yaml  LICENSE  Procfile  README.md  pyproject.toml  pytest.ini
.github/workflows/: python-tests.yml
lingualink/: app.py  supported_languages.py
lingualink/models/: translation.py
lingualink/templates/: index.html
lingualink/utils/: wikipedia.py  wikipedia_translation.py
tests/: test_app.py  test_smoke.py  test_translation.py  test_wikipedia.py
