[tool.poetry]
name = "lingualink"
version = "0.1.0"
description = ""
authors = ["mlow"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
transformers = "^4.44.2"
torch = "^2.4.1"
langchain = "^0.2.16"
numpy = ">=1.20,<2"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
sentencepiece = "^0.2.0"
sacremoses = "^0.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pre-commit = "^3.8.0"
flake8 = "^7.1.1"
black = "^24.8.0"
mock = "^5.1.0"
flask-testing = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
